# mdlm_sudoku

./: dataloader.py  diffusion.py  main.py  pyproject.toml  sudoku_dataloader.py
configs/data/: sudoku9-anchors.yaml  sudoku9-solutions.yaml
configs/model/: sudoku_100m.yaml  sudoku_10m.yaml  sudoku_1m.yaml  sudoku_50m.yaml  sudoku_5m.yaml
models/: __init__.py  autoregressive.py  dit.py  flash_attn_lazy.py
scripts/: install_cuda_extensions_uv.sh  prepare_sudoku9.py  preprocess_sudoku_9m.py  train_sudoku_100m.sbatch  train_sudoku_100m.sh  train_sudoku_10m.sbatch  train_sudoku_10m.sh  train_sudoku_1m.sbatch  train_sudoku_1m.sh  train_sudoku_50m.sbatch  train_sudoku_50m.sh  train_sudoku_5m.sbatch  train_sudoku_5m.sh
